font on ios is horrible, maybe that's fixed now?

--- a/src/Fitness/wwwroot/style.css
+++ b/src/Fitness/wwwroot/style.css
@@ -1,7 +1,7 @@
 html {
     background: #000;
     color: #fff;
-    font-family: 'segoe ui', sans-serif;
+    font-family: "segoe ui", sans-serif;
     font-weight: lighter;
     font-size: 15vw;
     line-height: 15vw;
@@ -16,6 +16,7 @@ html {
 
 * {
     cursor: default;
+    font-family: inherit;
     box-sizing: border-box;
     -ms-touch-action: manipulation;
     touch-action: manipulation;
@@ -139,8 +140,8 @@ body {
 }
 
     #footnotes footer {
-        font-size: 0.3rem;
-        line-height: 0.4rem;
+        font-size: 0.4rem;
+        line-height: 0.5rem;
         opacity: 0;
         text-align: right;
         animation: 4s ease-out forwards footnotes-fadein;
